test/examples/invalid/test-finish_then_hang.js

exports['not finished'] = function (test){
  test.finish()
  process.nextTick(function (){while(true){}})
}


